log
Wed, Mar 19, 2025  8:42:45 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Wed, Mar 19, 2025  8:42:50 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
34633ae
Wed, Mar 19, 2025  8:43:39 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
588d826
Wed, Mar 19, 2025  8:45:24 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
37d93c5
Wed, Mar 19, 2025  8:46:37 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3523466
Wed, Mar 19, 2025  8:49:50 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
11715a9
Wed, Mar 19, 2025  8:50:33 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
089186f
Wed, Mar 19, 2025  8:50:51 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:4: error: expected ';' before 'return'
    return L;
    ^~~~~~
exercises.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
901706c
